--- a/css/style.css
+++ b/css/style.css
@@ -19,19 +19,36 @@ button {
     transition: 0.5s;
     margin-left: 10px;
 }
+
 button:hover {
     --bg-opacity: 0;
     box-shadow: none;
     background-color: #242526;
     transition: 0.5s;
 }
+
+input, select {
+    background-color: #b0b3b8;
+    border-style: none;
+    border-radius: 4px;
+    padding: 4px;
+    margin: 1px;
+}
+
 a:link {
     color: #bbbb00
 }
+
 a:visited {
     color: #aaaa00
 }
 
 #lastUpdate {
     font-weight: bold;
+}
+
+.colorButton {
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
 }
